# autoformalization-with-llms

./: .gitignore  AutoformalizationWithLlms.lean  README  README.md  autoformalize.py  groqapi.py  lake-manifest.json  lakefile.lean  pyproject.toml  try_tactics.py
AutoformalizationWithLlms/: Basic.lean  autoformalize.py  lean-repl-test.py  nanof2f.lean
data/results/: fold_0_results_20.csv  results_dojo_step_5.csv  solved_theorems.txt  solved_theorems0.txt  summary.csv
data/results/solved/: gpt-4o temp 0.4.txt  gpt-4o temp 0.5.txt  gpt-4o temp 0.55.txt  gpt-4o-mini temp 0.5.txt
data/test/: fold_0.lean  fold_1.lean  fold_2.lean  fold_3.lean  fold_4.lean  fold_5.lean  fold_6.lean  fold_7.lean  fold_8.lean  fold_9.lean  minif2f-imports.txt  minif2f-text-version.txt
old-stuff/: minif2f.py  search.py
scripts/: alternative_method.py  dojo_example.py  evaluate.py  extract_from_lean_example.py  groqapi.py  neuralproofstate_withimports.py  oneshot.py  pantograph_example.py  revised_search.py  run_predictnextstep.py  search_updated.py  utils.py
src/: LLMModel.py  aevaluate.py  arevised_search.py  eval_w_params.py  evaluate.py  heuristics.py  lean_phrasebook.py  neuralproofstate.py  neuralproofstate_two.py  predictnextstep.py  revised_search.py  search.py  test.py  utils.py
tests/: test_heuristics.py  test_nps.py
